--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="wrapper">
 			<nav>
 				<ul class="main_nav">
-					<li class="current"><a href="#">Journal</a></li>
+					<li class="current"><a href="#" target="_current">Journal</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Work</a></li>
 					<li><a href="#">Contact</a></li>
